--- a/src/stylus/variable.styl
+++ b/src/stylus/variable.styl
@@ -15,7 +15,7 @@ $color-link = #2d8cf0
 $font-size-title-max = 30px
 $font-size-title-home = 20px
 $font-size-title-x = 16px
-$font-size-normal = 14px
+$font-size-normal = 12px
 
 //自定义规范
 $mainBlue =#24afff
@@ -26,3 +26,5 @@ $lightGrayBg = #f7f7f7
 $headerHeight = 60px
 $width-wrap = 1200px
 $mainRed = #ed4014
+$lmColor= #266ec1
+$blColor= #d13030
